projects/특이점이-온-개발자-MSA/code/ex04/k8s/frontend/frontend-ingress.yml
# 외부 진입점. 클러스터 외부 트래픽이 frontend-service로 들어옴
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: metacoding
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
